welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:54: error: illegal start of simple expression
}
^