welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() 
{
	def faire2(c:Color)=
	{
		avance()
		setCouleurBrosse(c)
		baisseBrosse()
		leveBrosse()
		recule()
		gauche()
		avance()
		setCouleurBrosse(c)
		baisseBrosse()
		leveBrosse()
		recule()
		droite()
		avance()
		avance()
		avance()
		gauche()
	}
	
	def faireM()=
	{
			faire2(Color.red)
			faire2(Color.blue)
			faire2(Color.yellow)
			faire2(Color.green)
	}

for (n <- 1 to 2)
{
		faireM()
		for (n <-1 to 4)
		{
			avance()	
		}
		faireM()
		gauche()
		for (n <- 1 to 4)
		{
			avance()
		}
		droite()

}

	
	
	for (n <- 1 to 2)
	
	
}
